--- a/src/main.tex
+++ b/src/main.tex
@@ -3,14 +3,15 @@
 \usepackage{color}
 \usepackage{framed}
 \usepackage{geometry}
+\usepackage{indentfirst}
 \geometry{a4paper,scale=0.8}
+
 \newcommand{\question[1]}{{\item\small\textbf{#1}\par}}
-\newcommand{\ans[1]}{{\begin{framed}{\setlength{\parindent}{1em}#1}\end{framed}}}
+\newcommand{\ans[1]}{{\begin{framed}\setlength\parindent{1em}{#1}\end{framed}}}
 \newcommand{\unsolve}{{\color{red}{remain unsolved \dots\dots}}}
 
 
 \begin{document}
-
 \input{sections/section1}
 \input{sections/section2}
 \input{sections/section3}
