--- a/src/sections/section3.tex
+++ b/src/sections/section3.tex
@@ -4,9 +4,9 @@
 	\question[试述近代中国各派力量对国家出路早期探索的方式、方案及其教训]
 	\ans[
 		\paragraph{太平天国农民战争}
-			\subparagraph{方式} 洪秀全带领太平军反对清政府腐朽统治和地主阶级压迫剥削，试图建立以天王为首的农民政权。
-			\subparagraph{方案} 《天朝田亩制度》确立了平均分配土地的方案；《资政新篇》确立了社会发展方案。
-			\subparagraph{教训} 太平天国起义及其失败表明，在半殖民地半封建的中国，农民具有伟大的革命潜力；但它自身不能担负起领导反帝反封建斗争取得胜利的重任。单纯的农民战争不可能完成争取民族独立和人民解放的历史任务。
+		\subparagraph{方式} 洪秀全带领太平军反对清政府腐朽统治和地主阶级压迫剥削，试图建立以天王为首的农民政权。
+		\subparagraph{方案} 《天朝田亩制度》确立了平均分配土地的方案；《资政新篇》确立了社会发展方案。
+		\subparagraph{教训} 太平天国起义及其失败表明，在半殖民地半封建的中国，农民具有伟大的革命潜力；但它自身不能担负起领导反帝反封建斗争取得胜利的重任。单纯的农民战争不可能完成争取民族独立和人民解放的历史任务。
 		\bigskip
 		\hrule
 		\bigskip
@@ -71,10 +71,22 @@
 	]
 	\question[试述辛亥革命的胜利与失败、教训与启示。]
 	\ans[
-		\paragraph{胜利：\\}
-		\paragraph{失败：\\}
-		\paragraph{教训与启示：\\}
-			
+		\paragraph{胜利：}
+			\subparagraph{封建帝制的覆灭：}
+				\textbf{1. 武装起义与保路风潮} 孙中山领导的同盟会不仅提出了革命纲领，而且从事实际的革命活动，他们先后发动了多次武装起义。这些起义虽然相继失败，但是产生了广泛的影响；1911年5月，清廷宣布“铁路干线收归国有”，并与四国银行团订立粤汉、川汉铁路借款合同，借“国有”名义把铁路利权出卖给帝国主义，同时借此“劫夺”商股。这激起了湖北、湖南、广东、四川四省的保路风潮，其中以四川为最烈。清政府在铁路权问题上采取的政策，进一步激起了民众的愤慨和反抗，加速了革命的爆发。
+				\textbf{2. 武昌首义与各地响应} 由于革命形势已经成熟，湖北新军中的共进会和文学社两个革命团体决定联合行动，在武昌举行武装起义。1911年10月10日晚，驻武昌的新军工程第八营的革命党人打响了起义的第一枪。起义军一夜之间就占领武昌，取得首义的胜利。武昌起义吹响了辛亥革命的号角，打开了清王朝统治的缺口。大江南北、长城内外，到处燃起革命的烈火。革命军在3天之内就光复了武汉三镇，成立了湖北军政府。在一个月内，就有13个省和上海及其它的省的许多州县宣布起义，脱离清政府的统治。腐朽的清王朝迅速土崩瓦解。1912年2月12日，清帝被迫退位。在中国延续了两千年的封建帝制顷刻覆灭。
+			\subparagraph{中华民国的建立：}
+				\textbf{1. 中华民国临时政府宣告成立} 1911年底，孙中山从海外回到上海。“独立”各省的代表在南京选举孙中山为临时大总统。1912年1月1日，孙中山在南京宣誓就职，改国号为“中华民国”，定1912年为民国元年，并正式成立中华民国临时政府。
+				\textbf{2. 中华民国临时约法} 1912年3月，临时参议院颁布《中华民国临时约法》。这是中国历史上第一部具有资产阶级共和国宪法性质的法典。《临时约法》以根本大法的形式废除了两千年来的封建君主专制制度，确认了资产阶级共和国的政治制度。	
+		\paragraph{失败：}
+			\subparagraph{封建军阀专制统治的形成：}
+				\textbf{1. 袁世凯窃国，辛亥革命流产}辛亥革命取得了巨大的成功，但仍以失败而告终。南京临时政府只存在了3个月便夭折了。北洋军阀首领袁世凯在帝国主义和国内反动势力以及附从革命的旧官僚、立宪派的共同支持下，窃夺了辛亥革命的果实。
+				\textbf{2. 封建军阀的专制统治} 袁世凯窃夺辛亥革命的果实之后，建立了代表大地主和买办资产阶级利益的北洋军阀反动政权。在政治上，北洋政府实行军阀官僚的专制统治。以袁世凯为首的封建军阀们大力扩充军队，建立特务、警察系统。他们制定《暂时新刑律》、《戒严法》等一系列反动法令，剥夺《临时约法》规定给予人民的言论、出版、集会、结社等各种政治权利，禁止罢工和一切革命活动；在经济上，北洋政府竭力维护帝国主义、地主阶级和买办资产阶级的利益。军阀、官僚本身就是大地主，他们还以各种手段兼并土地。许多自耕农和半自耕农陷入破产和丧失土地的境地，变成佃农和雇农。北洋政府还通过“清丈地亩”、征收各种苛捐杂税等手段，对农民进行敲骨吸髓的压榨。军阀与官僚还借助于政治势力，组成官僚买办资本集团，操纵、垄断财政金融和工业、运输业；在文化思想方面，尊孔复古思潮猖獗一时。他们攻击民主共和，宣传封建伦常，甚至要求将孔教定为“国教”。一些帝国主义分子也鼓吹孔教是“中国独一无二之根本”，只有尊孔才能避免“人人之心皆为革命所颠倒”。总之，北洋军阀政府从政治上、经济上和文化思想上对辛亥革命进行了全面的反攻倒算。中国落入了黑暗的深渊。资产阶级革命派在中国建立一个独立、民主的资产阶级共和国的梦想破灭了。
+			\subparagraph{2. 旧民主主义革命的失败：}
+			辛亥革命失败后，中国资产阶级革命派内部也发生了分化。许多革命党人以为，推翻封建帝制、建成共和政体，革命大功告成，从而丧失了革命意志。他们中有的人热衷于追逐个人的官职和利禄，甚至投靠军阀，迅速蜕化为新的官僚、政客。有的人埋头经营实业，为自身牟取经济利益。有的人热心于搞议会政治和政党内阁，甚至主张劝说袁世凯加入国民党。还有的人在革命受到挫折时，意志消沉，隐遁山林，或者出洋留学游历，以逃避国内的政治斗争。
+		\paragraph{教训与启示：} 
+			\subparagraph{教训} 从客观上说，辛亥革命发生于帝国主义时代，帝国主义与以袁世凯为代表的大地主大买办势力以及旧官僚、立宪派一齐勾结起来，从外部和内部绞杀了这场革命。从主观方面来说，这场革命失败的根本原因，在于它的领导者资产阶级革命派本身存在着许多弱点和错误。主要是：第一，没有提出彻底的反帝反封建的革命纲领。第二，不能充分发动和依靠人民群众。第三，不能建立坚强的革命政党，作为团结一切革命力量的强有力的核心。同盟会内部的组织比较松懈，派系纷杂，缺乏一个统一和稳定的领导核心。资产阶级革命派的这些弱点、错误，根源于中国民族资产阶级的软弱性和妥协性。正因为如此，辛亥革命仅仅赶跑了一个皇帝，却没有能够改变封建主义和军阀官僚政治的统治基础，无法完成反帝反封建的根本任务。
+			\subparagraph{启示} 辛亥革命的失败表明，资产阶级共和国的方案没有能够救中国，先进的中国人需要进行新的探索，为中国谋求新的出路。尽管辛亥革命最终失败了，但是，以孙中山为代表的中国民主革命的先驱者的业绩和不屈不挠的奋斗精神，永远是中国近代革命史上光辉的一页。经过辛亥革命，民主共和的思想从此流传广远，人们对革命的继续追求也绵延不绝。许多参加过辛亥革命的人，后来陆续参加中国共产党或成为共产党的忠诚朋友，这不是偶然的。
 	]
 \end{enumerate}
 
