--- a/src/sections/section2.tex
+++ b/src/sections/section2.tex
@@ -1,43 +1,55 @@
 \section{资本—帝国主义的入侵与近代中国社会的变化}
 \begin{enumerate}
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说鸦片战争是中国近代史的起点？]
 	\ans[随着中国的大门被西方列强用武力强迫打开，中国的社会性质开始发生质的变化。中国从一个享有完整主权的独立国家，逐步成为半殖民地国家，走上了半殖民地半封建社会的畸形发展的道路。随着社会主要矛盾的变化，中国逐渐开始了反帝反封建的资产阶级民主革命。正因为如此，鸦片战争就成了中国近代史的起点。]
 
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[什么是半殖民地半封建社会？中国的半殖民地半封建社会是怎样形成的?]
 	\ans[
-	鸦片战争以后，西方列强通过发动侵略战争、强迫中国签订一系列不平等条约，破坏了中国的领土主权、领海主权、关税主权、司法主权等，并一步一步地控制了中国的政治、经济、外交和军事。中国已经丧失了完全独立的地位，在相当程度上被殖民地化了。近代中国尽管在实际上已经丧失了拥有完整主权的独立国的地位，但是仍然维持着独立国家和政府的名义与形式。由于它与连名义上的独立也没有、而由殖民主义宗主国直接统治的殖民地尚有区别，因此称作半殖民地。\par
-	外国资本主义列强用武力打开了中国的门户，把中国卷入了世界资本主义经济体系和世界市场之中。随着外国资本主义的入侵，洋纱、洋布等商品在中国大量倾销，逐渐使中国的农业与手工业分离，从而破坏了中国自然经济的基础，促进了中国城乡商品经济的发展，给中国资本主义的产生造成了某些客观条件。破产的农民、手工业者流入城市，成了产业工人的后备军。一批中国官僚、买办、地主、商人开始投资兴办新式工业。中国开始出现了资本主义生产关系。中国已经不是完全的封建社会了。然而，西方列强并不愿意中国成为独立的资本主义国家。它们利用获取的政治、经济特权，在中国倾销商品，经营轻工业和重工业，对中国的民族工业进行直接的经济压迫。中国的民族资本主义经济虽然有了某些发展，但是并没有也不可能成为中国社会经济的主要形式。而在中国的资本主义经济中，外国资本及依附于它的官僚资本居于主导地位。在中国农村中，地主剥削农民的封建生产关系，在社会经济生活中依然占着显然的优势。这样，中国的经济既不再是完全的封建经济，也不是完全的资本主义经济，而成为半殖民地半封建的经济了。]
+		鸦片战争以后，西方列强通过发动侵略战争、强迫中国签订一系列不平等条约，破坏了中国的领土主权、领海主权、关税主权、司法主权等，并一步一步地控制了中国的政治、经济、外交和军事。中国已经丧失了完全独立的地位，在相当程度上被殖民地化了。近代中国尽管在实际上已经丧失了拥有完整主权的独立国的地位，但是仍然维持着独立国家和政府的名义与形式。由于它与连名义上的独立也没有、而由殖民主义宗主国直接统治的殖民地尚有区别，因此称作半殖民地。\par
+		外国资本主义列强用武力打开了中国的门户，把中国卷入了世界资本主义经济体系和世界市场之中。随着外国资本主义的入侵，洋纱、洋布等商品在中国大量倾销，逐渐使中国的农业与手工业分离，从而破坏了中国自然经济的基础，促进了中国城乡商品经济的发展，给中国资本主义的产生造成了某些客观条件。破产的农民、手工业者流入城市，成了产业工人的后备军。一批中国官僚、买办、地主、商人开始投资兴办新式工业。中国开始出现了资本主义生产关系。中国已经不是完全的封建社会了。然而，西方列强并不愿意中国成为独立的资本主义国家。它们利用获取的政治、经济特权，在中国倾销商品，经营轻工业和重工业，对中国的民族工业进行直接的经济压迫。中国的民族资本主义经济虽然有了某些发展，但是并没有也不可能成为中国社会经济的主要形式。而在中国的资本主义经济中，外国资本及依附于它的官僚资本居于主导地位。在中国农村中，地主剥削农民的封建生产关系，在社会经济生活中依然占着显然的优势。这样，中国的经济既不再是完全的封建经济，也不是完全的资本主义经济，而成为半殖民地半封建的经济了。
+	]
 	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述中国梦的由来和内涵。]
 	\unsolve
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[资本—帝国主义的入侵给中国带来了什么？]
 	\ans[
-		\paragraph{军事侵略}
-			发动侵略战争，屠杀中国人民；
-			侵占中国领土，划分势力范围；
-			勒索赔款，抢掠财富；
-		\paragraph{政治控制}
-			控制中国的内政、外交；
-			镇压中国人民的反抗；
-			扶植、收买代理人；
-		\paragraph{经济掠夺}
-			控制中国的通商口岸；
-			剥夺中国的关税自主权；
-			实行商品倾销和资本输出；
-			操控中国的经济命脉；
-		\paragraph{文化渗透}
-			披着宗教外衣，进行侵略活动；
-			为侵略中国制造舆论；
+		\begin{enumerate}
+		\item{\textbf{军事侵略}\par
+			发动侵略战争，屠杀中国人民；\par
+			侵占中国领土，划分势力范围；\par
+			勒索赔款，抢掠财富；\par
+		}
+		\item{\textbf{政治控制}\par
+			控制中国的内政、外交；\par
+			镇压中国人民的反抗；\par
+			扶植、收买代理人；\par
+		}
+		\item{\textbf{经济掠夺}\par
+			控制中国的通商口岸；\par
+			剥夺中国的关税自主权；\par
+			实行商品倾销和资本输出；\par
+			操控中国的经济命脉；\par
+		}
+		\item{\textbf{文化渗透}\par
+			披着宗教外衣，进行侵略活动；\par
+			为侵略中国制造舆论；\par
+		}
+		\end{enumerate}
 	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[1840年至1919年间中国历次反侵略战争失败的原因是什么？有何教训？]
 	\ans[
-		\paragraph{原因：}
-			\subparagraph{社会制度的腐败：}1840年以后，中国封建社会逐步变成了半殖民地半封建社会。1911年以前统治中国的清王朝，从皇帝到权贵，大都昏庸愚昧，不了解世界大势，不懂得御敌之策。许多官员贪污腐化，克扣军饷。不少将帅贪生怕死，临阵脱逃。他们大多害怕拥有坚船利炮的外国侵略者，甚至为了自身的私利，不惜出卖国家和民族的利益。他们尤其害怕人民群众，担心人民群众动员起来以后可能危及自身的统治。所以，他们不仅不敢放手发动和依靠人民群众的力量，而且常常压制与破坏人民群众和爱国官兵的反侵略斗争。
-			\subparagraph{经济技术的落后：}近代中国反侵略战争失败的另一个重要原因，是国家综合实力特别是经济技术和作战能力的落后。19世纪中叶，西方资本主义强国经过工业革命，经济和技术飞速发展，封建的中国已被远远抛在后面。
-		\paragraph{教训：}
-			\subparagraph{“师夷长技以制夷”和早期维新思想}
-				中国官吏和知识分子中的少数爱国、开明的有识之士，开始注意了解国际形势，研究外国史地，总结失败教训，寻找救国的道路和御敌的方法。他们通过收集、翻译传入的外国报刊、书籍、地图，以及战争中审问英军俘虏和向外国商人、传教士直接询问等各种方式，来获取世界知识。
-			\subparagraph{救亡图存和振兴中华}
-				鸦片战争以后，中国还只是少数精英开始有了朦胧的民族觉醒意识。到了中日甲午战争以后，当中华民族面临生死存亡的关头时，全民族就开始有了普遍的民族意识的觉醒。			
+		\textbf{原因：} \begin{itemize}
+			\item {社会制度的腐败：1840年以后，中国封建社会逐步变成了半殖民地半封建社会。1911年以前统治中国的清王朝，从皇帝到权贵，大都昏庸愚昧，不了解世界大势，不懂得御敌之策。许多官员贪污腐化，克扣军饷。不少将帅贪生怕死，临阵脱逃。他们大多害怕拥有坚船利炮的外国侵略者，甚至为了自身的私利，不惜出卖国家和民族的利益。他们尤其害怕人民群众，担心人民群众动员起来以后可能危及自身的统治。所以，他们不仅不敢放手发动和依靠人民群众的力量，而且常常压制与破坏人民群众和爱国官兵的反侵略斗争。}
+			\item {经济技术的落后：近代中国反侵略战争失败的另一个重要原因，是国家综合实力特别是经济技术和作战能力的落后。19世纪中叶，西方资本主义强国经过工业革命，经济和技术飞速发展，封建的中国已被远远抛在后面。}\end{itemize}
+		\textbf{教训：}\begin{itemize}
+			\item{“师夷长技以制夷”和早期维新思想。中国官吏和知识分子中的少数爱国、开明的有识之士，开始注意了解国际形势，研究外国史地，总结失败教训，寻找救国的道路和御敌的方法。他们通过收集、翻译传入的外国报刊、书籍、地图，以及战争中审问英军俘虏和向外国商人、传教士直接询问等各种方式，来获取世界知识。}
+			\item{救亡图存和振兴中华。鸦片战争以后，中国还只是少数精英开始有了朦胧的民族觉醒意识。到了中日甲午战争以后，当中华民族面临生死存亡的关头时，全民族就开始有了普遍的民族意识的觉醒。}\end{itemize}			
 	]
 \end{enumerate}
