--- a/src/sections/section4.tex
+++ b/src/sections/section4.tex
@@ -1,13 +1,120 @@
 \section{从开天辟地到星火燎原}
 \begin{enumerate}
-\question[为什么说新文化运动是近代中国一次伟大的思想启蒙运动？]
-\question[为什么说中国共产党的成立是历史的必然？]
-\question[为什么说中国共产党的成立是开天辟地的大事变？]
-\question[中国共产党成立后，中国革命出现了怎样的新局面？]
-\question[中国先进分子为什么和怎样选择了马克思主义？]
-\question[以毛泽东为代表的中国共产党人是如何探索和开辟中国革命新道路的？]
-\question[为什么说遵义会议是中国共产党历史上一个生死攸关的转折点？]
-\question[为什么说“井冈山革命根据地是中国革命的摇篮”？]
-\question[9、什么是长征精神？当代大学生应该怎样弘扬长征精神？]
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[为什么说新文化运动是近代中国一次伟大的思想启蒙运动？]
+	\ans[
+		\begin{enumerate}
+			\item 新文化运动，有着重大的历史意义。当时的启蒙思想家提倡民主、反对专制，提倡科学、反对迷信盲从，是切中时弊的。这些启蒙思想家，确实是敢于向两千年来神圣不可侵犯的封建礼教进行自觉挑战的第一批不妥协的战士。新文化运动的倡导者们在社会上掀起了一股思想解放的潮流。正因为如此，在那时，这个运动是生动活泼的，前进的，革命的。
+			\item 新文化运动左翼人士对资产阶级民主主义的怀疑，推动着他们去探索挽救危亡的新的途径，为他们以后接受马克思主义准备了适宜的思想土壤。
+		\end{enumerate}
+	]
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[为什么说中国共产党的成立是历史的必然？]
+	\ans[
+		\begin{enumerate}
+			\item 马克思主义在中国的广泛传播为中国共产党的成立提供了思想基础。五四运动以后，出现了一批宣传十月革命和社会主义思想的报刊；出现了研究马克思主义的团体，开始比较系统地介绍马克思主义的学说，为中国共产党的成立提供了思想基础。
+			\item 中国共产党成立的经济基础，是辛亥革命以后中国民族资本主义经济的迅速发展；工人阶级的成长和工人运动的发展为中国共产党的成立奠定了阶级基础。五四运动中国工人阶级登上历史舞台并发挥了主力军的作用，五四运动后，中国工人运动得到进一步的发展，工人的罢工次数增加，斗争的内容也从经济斗争转向政治斗争，开始从自在阶级向自为阶级的转变，表明无产阶级建立自己的政党的条件趋于成熟。
+			\item 如果不把马克思主义同工人斗争相结合，还将理论停留在书本上，对实际生活不会发生影响；工人运动没有马克思主义的指导，只会是自发的、零散的、限于经济的斗争，不会有政治意义。马克思主义必须与工人运动相结合。经过五四运动，一批具有初步共产主义思想的知识分子成长起来，推动了马克思主义同工人运动的结合，为正式创建中国共产党作了准备。
+			\item 外部条件主要是列宁领导的共产国际从各个方面给予帮助，推动了中国共产党的成立。
+			\item 中国共产党成立的组织基础应该是陈独秀、李大钊开始进行建党活动。1920年秋，“南陈北李”先后在上海和北京建立中国共产党组织。此后，各地共产党组织先后建立在武汉、长沙、济南、广州和欧洲、日本。 各地共产党组织成立后，有计划地到工人中去宣传马克思主义，马克思主义开始与中国工人运动相结合，无产阶级开始明确自己的使命，看到斗争的前途，由自在阶级上升为自为阶级。各地共产党组织的成立表明建立中国共产党的条件已经基本成熟了。
+		\end{enumerate}
+		
+	]
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[为什么说中国共产党的成立是开天辟地的大事变？]
+	\ans[
+	\begin{enumerate}
+	\item 中国共产党的成立使中国革命有了坚强的领导核心，灾难深重的中国人民有了可以依赖的组织者和领导者，中国革命从此不断向前发展，由民主主义革命向社会主义革命推进。
+	\item 中国共产党的成立，使中国革命有了科学的指导思想。中国共产党以马克思主义为指导思想，把马克思主义和中国革命的具体实践相结合，制定了正确的革命纲领和斗争策略，为中国人民指明了斗争的目标和走向胜利的道路。
+	\item 中国共产党的成立，使中国革命有了新的革命方法，并沟通了中国革命和世界无产阶级革命之间的联系，为中国革命获得了广泛的国际援助和避免走资本主义提供了客观可能性。
+	\item 中国革命有了新的奋斗目标。即：实现新民主主义革命的胜利，建设社会主义和共产主义社会。
+	\end{enumerate}
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[中国共产党成立后，中国革命出现了怎样的新局面？]
+	\ans[
+		\begin{enumerate}
+			\item{
+				制定革命纲领，发动工农运动。
+				\begin{itemize}
+				\item 制定反帝反封建的民主革命纲领
+				\item 发动工农群众开展革命斗争
+				\end{itemize}
+			}
+			\item{
+				实行国共合作，掀起大革命高潮。
+				\begin{itemize}
+				\item 国共合作的形成
+				\item 掀起了史无前例的反帝反封建大革命
+				\end{itemize}
+			}
+		\end{enumerate}
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[中国先进分子为什么和怎样选择了马克思主义？]
+	\ans[
+		中国先进分子选择马克思主义的思想旗帜，走上马克思主义指引的道路，是他们经过长期的、艰苦的探索之后的必然结果。
+		\begin{itemize}
+		\item 第一次世界大战期间，资本主义制度的内在矛盾已经比较充分地暴露出来，先进分子中的一些人在宣传西方资产阶级民主主义时，就已经开始对它有所怀疑和保留。
+		\item 先进分子在民主科学思想传播中经常遭遇挫折，联想到过去中国人学习西方的各种努力屡遭失败的事实，他们对资产阶级共和国方案在中国的可行性遂产生了极大的疑问。
+		\item 十月革命改变了人类历史的发展进程，使中国的先进分子从中看到了民族解放的新希望：经济文化落后的国家也可以用社会主义思想指引自己走向解放之路；苏俄号召反对帝国主义，并以新的平等的态度对待中国，赢得了先进分子的好感，有力地推动了社会主义思想在中国的传播；十月革命中，俄国工人、农民和士兵群众的广泛发动并由此赢得胜利的事实，给予中国先进分子以新的革命方法的启示，推动他们去研究这个革命所遵循的主义。
+		\item 五四运动中，中国工人阶级登上历史舞台，显示了比资产阶级知识分子更加强大的力量，使中国先进知识分子对马克思主义运用于中国革命的前景产生了极大的希望。
+		\end{itemize}
+		这样，五四运动后中国的先进分子选择了马克思主义的思想旗帜。率先举起马克思主义大旗的是李大钊，他在五四运动前就已经成为一个马克思主义者。五四运动后陈独秀、毛泽东、董必武等更多的先进知识分子，加入到马克思主义的队伍中。
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[以毛泽东为代表的中国共产党人是如何探索和开辟中国革命新道路的？]
+	\ans[
+		\begin{itemize}
+			\item 开展武装反抗国民党统治的斗争 1927年8月，中共中央在汉口召开紧急会议（八七会议），彻底清算了大革命后期的陈独秀右倾机会主义错误，确定了土地革命和武装反抗国民党方针。 八七会议以后，举行了南昌起义、湘赣边界秋收起义、广州起义。中国革命由此发展到了一个新阶段。
+			\item 走农村包围城市的革命道路 以农村为重点，到农村去发动农民，进行土地革命，开展武装斗争，建设根据地，这是1927年以后中国革命发展的客观规律所要求的。农村包围城市、武装夺取政权这条革命心道路的开辟，依靠了党和人民的集体奋斗，凝聚了党和人民的集体智慧。而毛泽东是其中的杰出代表。 
+			\item 毛泽东不仅在实践中首先把革命进攻的方向指向了农村，而且从理论上阐明了武装斗争的极端重要性和农村应当成为党的工作中心的思想 1928年，毛泽东写了《中国的红色政权为社么能够存在？》、《井冈山的斗争》等文章，明确指出以农业为主要经济的中国革命，以军事发展暴动，是一种特征；还科学阐明了共产党领导的土地革命、武装斗争于根据地建设这三者之间的辩证统一关系。 1930年，《星星之火可以燎原》一文中，毛泽东指出：红军、游击队和红色区域的建立和发展，是半殖民地中国在无产阶级领导下的农民斗争的最高形式，和半殖民地农民斗争发展的必然结果，并且无疑议的是促进全国革命高潮的最重要因素。 
+			\item 农村包围城市，武装夺取政权理论，是对1927年革命失败后中国共产党领导的红军和根据地斗争经验的科学概括。它是以毛泽东为代表的中国共产党人同当时党内盛行的把马克思主义教条化、把共产国际和苏联经验神圣化的错误倾向做坚决斗争基础上形成的。 农村包围城市、武装夺取政权理论的提出，标志着中国化的马克思主义：毛泽东思想的初步形成。 
+			\item 随着革命心道路的开辟，中国革命开始走向复兴。中国共产党领导的红军和根据地逐步发展起来。红军游击战争实际上已经成为中国革命的主要形式，农村根据地成为积蓄和锻炼革命力量的主要战略阵地。
+		\end{itemize}
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[为什么说遵义会议是中国共产党历史上一个生死攸关的转折点？]
+	\ans[
+		\begin{itemize}
+			\item 遵义会议批判了博古、李德在军事指挥上的错误，实际上结束了以王明为代表的“左”倾教条主义、冒险主义在党中央的统治，避免了中国革命遭到更为严重的损失。
+			\item 遵义会议对中央领导机构进行了改组，确立了毛泽东在红军和党中央的领导地位，开始形成以毛泽东为核心的党中央的正确领导。
+			\item 遵义会议对党中央领导机构的改组和对错误军事路线的纠正，都是在同共产国际中断联系的情况下进行的。这是中国共产党第一次独立自主地运用马克思列宁主义基本原理解决自己的路线、方针和政策的会议。这标志着中国共产党已经在政治上开始走向成熟。 
+		\end{itemize}
+		遵义会议在极端危急的历史关头，挽救了党，挽救了红军，挽救了中国革命，它因此而成为中国共产党历史上一个生死攸关的转折点。
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[为什么说“井冈山革命根据地是中国革命的摇篮”？]
+	\ans[
+		\begin{itemize}
+			\item 自从1927年毛主席建立井冈山之革命根据地，朱毛会师后使得两只支流汇成一江春水井冈山保卫了“红色火种。
+			\item 在井冈山中国的革命前进发生了历史性的转折，井冈山“孕育”了中国工农红军，在井冈山上毛主席回答了“红军到底能打多久”等一系列问题，答案是“星星之火可以燎原”，
+		\	item 开辟了农村包围城市的正确革命路线。井冈山之路奠定了中国工农红军走向全国的基础
+		\end{itemize}
+	]
+
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	\question[9、什么是长征精神？当代大学生应该怎样弘扬长征精神？]
+	\ans[
+		\begin{enumerate}
+			\item 长征精神是红军指战员在长征途中表现出了对革命理想和事业无比的忠诚、坚定的信念，表现出了不怕牺牲、敢于胜利的无产阶级乐观主义精神，表现出了顾全大局、严守纪律、亲密团结的高尚品德。伟大长征精神教育了一代又一代人，无数英雄模范继承长征精神，不断书写着感人篇章。
+			\item {
+				作为当代青年应从以下三方面发扬长征精神。
+				\begin{enumerate}
+					\item {确立远大理想和坚定信念，培养乐观主义精神。坚定的理想信念是长征精神的核心。红军将士在长征中所表现出的革命英雄主义精神、革命乐观主义精神、大无畏的牺牲精神、英勇顽强的战斗作风，无不基于坚定的理想信念。我们当代青年缺乏的就是坚定的理想信念。当代青年发扬长征精神，就要树立中华民族伟大复兴的远大理想，坚定走中国特色社会主义道路的信念；就要培养百折不挠的乐观主义精神。
+					}
+					\item{培养艰苦奋斗精神。通向理想境界的道路从来就不平坦，任何辉煌业绩都要通过艰苦奋斗去创造。长征中，红军既要同围追堵截的几十万国民党军浴血奋战，又要与党内的错误思想斗争，还要经受饥寒伤病的折磨，克服无数高山大川和极端恶劣的自然环境，艰难困苦考验了红军，铸就了红军艰苦奋斗的精神。在和平年代成长的我们，对艰苦奋斗精神颇有微词，认为它已经过时，无法“与时俱进”。的确，受拜金主义、享乐主义影响较深的我们领会不了艰苦奋斗。当代大学生就算不是衣来伸手、饭来张口，但也是每个家庭的心肝宝贝，自然没吃过苦。基本上家长们是不会让我们去体验艰苦奋斗的。我们没有体会到艰苦奋斗，而我们又崇尚挑战自我、挑战极限、挑战命运，这些更是要具有艰苦奋斗精神才能完成。因此，我们要教育自己发扬长征精神，做好长期艰苦奋斗的准备，要熟悉了解国情，敢于正视困难，不怕吃苦，顽强拼搏，迎接挑战，特别是要勇于到基层和贫困艰苦的地方去就业创业，以知识能力和顽强斗志，开创新事业，作出新贡献。
+					}
+					\item{培养万众一心、团结拼搏的集体主义精神长征精神就是国家和民族利益高于一切、万众一心、团结互助的集体主义精神。当代青年大多习惯以自我为中心，集体意识、民族意识淡薄。家长的期盼又使得我们习惯做竞争者。竞争意识的高涨更是使得集体主义精神无法成为我们的社会意识。但集体主义已成为社会主义基本道德规范之一，有纪律已成为培养四有新人的一个标准。当代青年要成长为中国特色社会主义事业的建设者和接班人，同样需要顾全大局、严守纪律、团结协作、万众一心。同样需要红军那种“手足情、同志心”，热爱集体，关心他人。
+					}
+				\end{enumerate}
+			}
+		\end{enumerate}
+	]
 \end{enumerate}
 
