--- a/src/sections/section3.tex
+++ b/src/sections/section3.tex
@@ -1,65 +1,95 @@
 
 \section{从洪秀全到孙中山}
 \begin{enumerate}
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述近代中国各派力量对国家出路早期探索的方式、方案及其教训]
 	\ans[
-		\paragraph{太平天国农民战争}
-		\subparagraph{方式} 洪秀全带领太平军反对清政府腐朽统治和地主阶级压迫剥削，试图建立以天王为首的农民政权。
-		\subparagraph{方案} 《天朝田亩制度》确立了平均分配土地的方案；《资政新篇》确立了社会发展方案。
-		\subparagraph{教训} 太平天国起义及其失败表明，在半殖民地半封建的中国，农民具有伟大的革命潜力；但它自身不能担负起领导反帝反封建斗争取得胜利的重任。单纯的农民战争不可能完成争取民族独立和人民解放的历史任务。
+		{\begin{center}\textbf{太平天国农民战争}\end{center}}
+		\textbf{方式：} 洪秀全带领太平军反对清政府腐朽统治和地主阶级压迫剥削，试图建立以天王为首的农民政权。\par
+		\textbf{方案：} 《天朝田亩制度》确立了平均分配土地的方案；《资政新篇》确立了社会发展方案。\par
+		\textbf{教训：} 太平天国起义及其失败表明，在半殖民地半封建的中国，农民具有伟大的革命潜力；但它自身不能担负起领导反帝反封建斗争取得胜利的重任。单纯的农民战争不可能完成争取民族独立和人民解放的历史任务。\par
 		\bigskip
 		\hrule
 		\bigskip
-		\paragraph{洋务运动}
-			\subparagraph{方式} 为挽救清政府的统治危机，封建统治阶级中的部分成员主张学习西方的武器装备和科学技术，兴办洋务。
-			\subparagraph{方案}  兴办近代企业；建立新式海陆军；创办新式学堂，派遣留学生。
-			\subparagraph{教训}{
-				\textbf{(1)洋务运动具有封建性。}洋务运动的指导思想是“中学为体，西学为用”，即在封建主义思想的指导下，在维持封建的上层建筑、经济基础的条件下发展一些近代工业，为维持清朝的封建统治服务。也就是说，洋务派企图以吸取西方近代生产技术为手段，来达到维护和巩固中国封建统治的目的。这就决定了它必然失败的命运。因为新的生产力是同封建主义的生产关系及其上层建筑不相容的，是不可能在封建主义的外壳中发展起来的。他们既要发展近代工业，却又采取垄断经营、侵吞商股等手段压制民族资本；既想培养洋务人才，又不愿改变封建科举制度。
-				\textbf{(2)洋务运动对西方列强具有依赖性。} 洋务运动进行之时，清政府已与西方列强签订了一批不平等条约，西方列强正是依据种种特权，从政治、经济等各方面加紧对中国的侵略和控制，它们并不希望中国真正富强起来。而洋务派官员却一再主张对外“和戎”，其所兴办的企业一切仰赖外国，他们企图依赖外国来达到“自强”、“求富”的目的。
-				\textbf{(3)洋务运动具有腐朽性。}洋务派所创办的新式企业虽然具有一定的资本主义性质，但其管理却仍是封建衙门式的。洋务派所办的军事工业完全由官方控制，经营不讲效益，造出的枪炮轮船质量低下。官督商办的民用工业，其管理也是由政府“专派大员，用人理财悉听调度”，商人并无发言权，往往还要承担企业的亏损。企业内部极其腐败，充斥着徇私舞弊、贪污盗窃、挥霍浪费等官场恶习。大小官员既不懂生产技术，又不懂经营管理。
-			}
+		{\begin{center}\textbf{洋务运动}\end{center}}\par
+			\textbf{方式：} 为挽救清政府的统治危机，封建统治阶级中的部分成员主张学习西方的武器装备和科学技术，兴办洋务。\par
+			\textbf{方案：}  兴办近代企业；建立新式海陆军；创办新式学堂，派遣留学生。\par
+			\textbf{教训：} \begin{enumerate}
+				\item 洋务运动具有封建性。洋务运动的指导思想是“中学为体，西学为用”，即在封建主义思想的指导下，在维持封建的上层建筑、经济基础的条件下发展一些近代工业，为维持清朝的封建统治服务。也就是说，洋务派企图以吸取西方近代生产技术为手段，来达到维护和巩固中国封建统治的目的。这就决定了它必然失败的命运。因为新的生产力是同封建主义的生产关系及其上层建筑不相容的，是不可能在封建主义的外壳中发展起来的。他们既要发展近代工业，却又采取垄断经营、侵吞商股等手段压制民族资本；既想培养洋务人才，又不愿改变封建科举制度。
+				\item 洋务运动对西方列强具有依赖性。 洋务运动进行之时，清政府已与西方列强签订了一批不平等条约，西方列强正是依据种种特权，从政治、经济等各方面加紧对中国的侵略和控制，它们并不希望中国真正富强起来。而洋务派官员却一再主张对外“和戎”，其所兴办的企业一切仰赖外国，他们企图依赖外国来达到“自强”、“求富”的目的。
+				\item 洋务运动具有腐朽性。洋务派所创办的新式企业虽然具有一定的资本主义性质，但其管理却仍是封建衙门式的。洋务派所办的军事工业完全由官方控制，经营不讲效益，造出的枪炮轮船质量低下。官督商办的民用工业，其管理也是由政府“专派大员，用人理财悉听调度”，商人并无发言权，往往还要承担企业的亏损。企业内部极其腐败，充斥着徇私舞弊、贪污盗窃、挥霍浪费等官场恶习。大小官员既不懂生产技术，又不懂经营管理。\end{enumerate}\par
 		\bigskip
 		\hrule
 		\bigskip
-		\paragraph{维新运动}
-			\subparagraph{方式}  19世纪90年代以后，中国民族资本主义有了初步发展。新兴的民族资产阶级迫切要求挣脱外国资本主义和国内封建势力的压迫和束缚，为在中国发展资本主义开辟道路。甲午战争的惨败，造成了新的民族危机，激发了新的民族觉醒。而站在救亡图存和变法维新前列的，正是代表民族资本主义发展要求的知识分子。他们把向西方学习推进到一个新的高度，即不但要求学习西方的科学技术，而且要求学习西方资本主义的政治制度和思想文化。在内忧外患的冲击和中西文化的碰撞过程中，人们逐步形成了一个共识：要救国只有维新，要维新，只有学外国。那时的外国只有西方资本主义国家是进步的，它们成功地建设了资产阶级的现代国家。日本向西方学习有成效，中国人也想向日本学。在这样的历史条件下，资产阶级的改良思想迅速地高涨起来，逐步形成为变法维新的思潮，并在1898年发展成一场变法维新的政治运动。
-			\subparagraph{方案} （1）向皇帝上书。如康有为曾先后7次向光绪皇帝上书，其中最著名的是他在1895年联合在京参加会试的举人共同发起的“公车上书”。（2）著书立说。如康有为写了《新学伪经考》、《孔子改制考》，梁启超写了《变法通议》，谭嗣同写了《仁学》，严复翻译了赫胥黎的《天演论》等。（3）介绍外国变法的经验教训。如康有为向光绪皇帝进呈了《日本变政考》、《俄彼得变政记》、《波兰分灭记》等书。（4）办学会。著名的有强学会、南学会、保国会等。（5）设学堂。重要的有康有为主持的广州万木草堂、梁启超主持的长沙时务学堂等。（6）办报纸。影响最大的有梁启超任主笔的上海《时务报》、严复主办的天津《国闻报》以及湖南的《湘报》等。
-			\subparagraph{教训} 维新运动不但暴露了这个阶级的软弱性，同时也说明在半殖民地半封建的旧中国，企图通过统治者走自上而下的改良的道路，是根本行不通的。要想争取国家的独立、民主、富强，必须用革命的手段，推翻帝国主义、封建主义联合统治的半殖民地半封建的社会制度。戊戌维新的失败再次暴露出清朝统治集团的腐朽与顽固，“戊戌六君子”流血的教训促使一部分人放弃改良主张，开始走上革命的道路。孙中山领导的资产阶级民主革命，进一步发展起来。
+		{\begin{center}\textbf{维新运动}\end{center}}\par
+			\textbf{方式：}  19世纪90年代以后，中国民族资本主义有了初步发展。新兴的民族资产阶级迫切要求挣脱外国资本主义和国内封建势力的压迫和束缚，为在中国发展资本主义开辟道路。甲午战争的惨败，造成了新的民族危机，激发了新的民族觉醒。而站在救亡图存和变法维新前列的，正是代表民族资本主义发展要求的知识分子。他们把向西方学习推进到一个新的高度，即不但要求学习西方的科学技术，而且要求学习西方资本主义的政治制度和思想文化。在内忧外患的冲击和中西文化的碰撞过程中，人们逐步形成了一个共识：要救国只有维新，要维新，只有学外国。那时的外国只有西方资本主义国家是进步的，它们成功地建设了资产阶级的现代国家。日本向西方学习有成效，中国人也想向日本学。在这样的历史条件下，资产阶级的改良思想迅速地高涨起来，逐步形成为变法维新的思潮，并在1898年发展成一场变法维新的政治运动。\par
+			\textbf{方案：} \begin{enumerate}
+				\item 向皇帝上书。如康有为曾先后7次向光绪皇帝上书，其中最著名的是他在1895年联合在京参加会试的举人共同发起的“公车上书”。
+				\item 著书立说。如康有为写了《新学伪经考》、《孔子改制考》，梁启超写了《变法通议》，谭嗣同写了《仁学》，严复翻译了赫胥黎的《天演论》等。
+				\item 介绍外国变法的经验教训。如康有为向光绪皇帝进呈了《日本变政考》、《俄彼得变政记》、《波兰分灭记》等书。
+				\item 办学会。著名的有强学会、南学会、保国会等。
+				\item 设学堂。重要的有康有为主持的广州万木草堂、梁启超主持的长沙时务学堂等。
+				\item 办报纸。影响最大的有梁启超任主笔的上海《时务报》、严复主办的天津《国闻报》以及湖南的《湘报》等。\end{enumerate} \par
+			\textbf{教训：} 维新运动不但暴露了这个阶级的软弱性，同时也说明在半殖民地半封建的旧中国，企图通过统治者走自上而下的改良的道路，是根本行不通的。要想争取国家的独立、民主、富强，必须用革命的手段，推翻帝国主义、封建主义联合统治的半殖民地半封建的社会制度。戊戌维新的失败再次暴露出清朝统治集团的腐朽与顽固，“戊戌六君子”流血的教训促使一部分人放弃改良主张，开始走上革命的道路。孙中山领导的资产阶级民主革命，进一步发展起来。
 	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述近代以来中国人学习西方的努力屡遭失败的原因。]
 	\unsolve
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说太平天国起义是中国旧式农民战争的最高峰？]
-	\ans[它把千百年来农民对拥有土地的渴望在《天朝田亩制度》中比较完整地表达了出来。《资政新篇》则是中国近代历史上第一个比较系统的发展资本主义的方案，这反映了太平天国某些领导人在后期试图通过发展资本主义来寻求出路的一种新努力。因此，太平天国起义具有了不同于以往农民战争的新的历史特点。]
+	\ans[
+		它把千百年来农民对拥有土地的渴望在《天朝田亩制度》中比较完整地表达了出来。《资政新篇》则是中国近代历史上第一个比较系统的发展资本主义的方案，这反映了太平天国某些领导人在后期试图通过发展资本主义来寻求出路的一种新努力。因此，太平天国起义具有了不同于以往农民战争的新的历史特点。
+	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[从现代化的视角论述洋务运动在中国现代化进程中的作用。]
 	\ans[
-		洋务派继承了魏源“师夷长技以制夷”的思想，通过所掌握的国家权力集中力量优先发展军事工业，同时也发展若干民用工业，在客观上对中国的早期工业和民族资本主义的发展起了某些促进作用。但是，洋务运动的主流，并不是要使中国朝着独立的资本主义方向发展。\par
-		洋务运动时期，为了培养通晓洋务的人才，开办了一批新式学堂，派出了最早的官派留学生，这是中国近代教育的开始。与此同时，京师同文馆、江南机器制造局附设的翻译馆还翻译了一批西学书籍。虽然其中大部分是有关近代物理、化学、数学、天文、地理的自然科学书籍，内容浅近，但给当时的中国带来了新的知识，使人们打开了眼界。\par
-		洋务运动时期，伴随着资本主义生产方式的出现，传统的“重本抑末”、“重义轻利”、商为“四民”之末等观念都受到冲击，社会风气和价值观念开始变化，工商业者的地位上升。西方的各种技术和器物不再被当作“奇技淫巧”受到排斥，而是被视为模仿、学习的对象。这一切，都有利于资本主义经济的发展，也有利于社会风气的改变。
+		\begin{itemize}
+			\item 洋务派继承了魏源“师夷长技以制夷”的思想，通过所掌握的国家权力集中力量优先发展军事工业，同时也发展若干民用工业，在客观上对中国的早期工业和民族资本主义的发展起了某些促进作用。但是，洋务运动的主流，并不是要使中国朝着独立的资本主义方向发展。
+			\item 洋务运动时期，为了培养通晓洋务的人才，开办了一批新式学堂，派出了最早的官派留学生，这是中国近代教育的开始。与此同时，京师同文馆、江南机器制造局附设的翻译馆还翻译了一批西学书籍。虽然其中大部分是有关近代物理、化学、数学、天文、地理的自然科学书籍，内容浅近，但给当时的中国带来了新的知识，使人们打开了眼界。
+			\item 洋务运动时期，伴随着资本主义生产方式的出现，传统的“重本抑末”、“重义轻利”、商为“四民”之末等观念都受到冲击，社会风气和价值观念开始变化，工商业者的地位上升。西方的各种技术和器物不再被当作“奇技淫巧”受到排斥，而是被视为模仿、学习的对象。这一切，都有利于资本主义经济的发展，也有利于社会风气的改变。
+		\end{itemize}
 	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[以维新运动和辛亥革命为例，试比较近代中国改良和革命的异同。]
 	\ans[
-		\paragraph{要不要以革命手段推翻清王朝\\}这是双方论战的焦点。改良派说，革命会引起下层社会暴乱，招致外国的干涉、瓜分，使中国“流血成河”、“亡国灭种”，所以要爱国就不能革命，只能改良、立宪。\par
-		革命派针锋相对地指出，清政府是帝国主义的“鹰犬”，因此爱国必须革命，“欲求免瓜分之祸，舍革命末由”。只有通过革命，才能获得民族解放和社会进步。\par
-		革命派还进一步驳斥了改良派认为因革命要“杀人流血”、“破坏一切”而不可革命的说法。这就是说，革命本身正是为了建设，破坏与建设是革命的两个方面。
-		\paragraph{要不要推翻帝制，实行共和\\}
-		改良派认为，中国“国民恶劣”、“智力低下”，“民智未开”、“程度未逮”，没有实行民主共和政治的能力，如果实行，非亡国不可。因此，只能实行“君主立宪”。梁启超甚至宣称，“与其共和，不如君主立宪；与其君主立宪，又不如开明专制”。只有劝告清政府主动实行“开明专制”，并进而推行君主立宪，才是中国政治的现实出路。\par
-		革命派针锋相对地指出，不是“国民恶劣”，而是“政府恶劣”。民主共和是大势所趋，人心所向。拯救中国与建设中国都必须“取法乎上”，直接推行民主制度，而不能以国民素质低劣为借口，搞君主立宪甚或开明专制。只有“兴民权，改民主”，才是中国的唯一出路。中国国民自有颠覆专制制度、建立民主共和的能力。
-		\paragraph{要不要社会革命\\}
-		改良派反对土地国有、反对平均地权。他们认为中国社会经济组织优良，土地问题不是中国最重要的问题，不存在社会革命的可能。社会革命只会导致中国的大动乱。他们还攻击主张平均地权是“煽动乞丐流氓”，主张土地国有是“危害国本”，并表示在这个问题上“宁死不让”。\par
-		革命派强调，当时的中国存在着严重的“地主强权”、“地权失平”的现象，而“救治之法，惟有实行土地国有之政策”。必须通过平均地权以实现土地国有，在进行政治革命的同时实现社会革命，才能避免贫富不均等社会问题的出现。
+		\begin{itemize}
+			\item {\textbf{要不要以革命手段推翻清王朝}\par
+				这是双方论战的焦点。改良派说，革命会引起下层社会暴乱，招致外国的干涉、瓜分，使中国“流血成河”、“亡国灭种”，所以要爱国就不能革命，只能改良、立宪。\par
+				革命派针锋相对地指出，清政府是帝国主义的“鹰犬”，因此爱国必须革命，“欲求免瓜分之祸，舍革命末由”。只有通过革命，才能获得民族解放和社会进步。\par
+				革命派还进一步驳斥了改良派认为因革命要“杀人流血”、“破坏一切”而不可革命的说法。这就是说，革命本身正是为了建设，破坏与建设是革命的两个方面。\par
+				}
+		
+			\item{\textbf{要不要推翻帝制，实行共和}\par
+				改良派认为，中国“国民恶劣”、“智力低下”，“民智未开”、“程度未逮”，没有实行民主共和政治的能力，如果实行，非亡国不可。因此，只能实行“君主立宪”。梁启超甚至宣称，“与其共和，不如君主立宪；与其君主立宪，又不如开明专制”。只有劝告清政府主动实行“开明专制”，并进而推行君主立宪，才是中国政治的现实出路。\par
+				革命派针锋相对地指出，不是“国民恶劣”，而是“政府恶劣”。民主共和是大势所趋，人心所向。拯救中国与建设中国都必须“取法乎上”，直接推行民主制度，而不能以国民素质低劣为借口，搞君主立宪甚或开明专制。只有“兴民权，改民主”，才是中国的唯一出路。中国国民自有颠覆专制制度、建立民主共和的能力。\par
+			}
+			\item{\textbf{要不要社会革命}\par
+				改良派反对土地国有、反对平均地权。他们认为中国社会经济组织优良，土地问题不是中国最重要的问题，不存在社会革命的可能。社会革命只会导致中国的大动乱。他们还攻击主张平均地权是“煽动乞丐流氓”，主张土地国有是“危害国本”，并表示在这个问题上“宁死不让”。\par
+				革命派强调，当时的中国存在着严重的“地主强权”、“地权失平”的现象，而“救治之法，惟有实行土地国有之政策”。必须通过平均地权以实现土地国有，在进行政治革命的同时实现社会革命，才能避免贫富不均等社会问题的出现。\par
+			}
+		\end{itemize}
 	]
-
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[如何评价孙中山的三民主义学说？]
 	\ans[
-		\paragraph{民族主义\\} 
+		\textbf{民族主义}\par 
 		民族主义包括“驱除鞑虏，恢复中华”两项内容。一是要以革命手段推翻清朝政府，改变它一贯推行的民族歧视和民族压迫政策；二是追求独立，建立“民族独立的国家”，变半殖民地半封建社会的中国为独立的中国。孙中山指出，民族主义不是简单的排满，不是针对一切满人，而是“应将满洲政府所有压制人民之手段，专制不平之政治，暴虐残忍之刑罚，勒派加抽之苛捐，及满洲政府所纵容之虎狼官吏，一切扫除”。也就是要结束清政府的媚外政策和专制统治。\par
-		但是，同盟会纲领中的民族主义没有从正面鲜明地提出反对帝国主义的主张。当时的革命派对于帝国主义的本质认识不清，害怕帝国主义干涉，甚至幻想以承认不平等条约“继续有效”为条件来换取列强对自己的支持。同时，他们也没有明确地把汉族军阀、官僚、地主作为革命对象，从而给了这部分人后来从内部和外部破坏革命以可乘之机。
-　　\paragraph{民权主义\\} 民权主义的内容是“创立民国”，即推翻封建专制制度，建立资产阶级民主共和国。这就是孙中山所说的政治革命。政治革命的目的是建立民国。《军政府宣言》指出：“凡为国民皆平等以有参政权。大总统由国民共举。议会以国民共举之议员构成之。制定中华民国宪法，人人共守。敢有帝制自为者，天下共击之。”孙中山强调，政治革命应当与民族革命并行。民族革命是扫除“现在恶劣政治”，而政治革命则是扫除“恶劣政治的根本”，从而把建立民主共和国的目标与实现民族独立的目标连接在一起，并把斗争矛头直接指向集民族压迫与封建专制统治于一身的清政府。\par
-		不过，民权主义虽然强调了要建立民主共和国，却忽略了广大劳动群众在国家中的地位，因而难以使人民的民主权利得到真正的保证。
-　　\paragraph{民生主义\\} 民生主义在这时指的是“平均地权”，也就是孙中山所说的社会革命。孙中山主张核定全国土地的地价，其现有之地价，仍属原主；革命后的增价，则归国家，为国民共享。国家还可按原定地价收买地主的土地。他认为，西方资本主义发展中的诸多社会问题，其根源在于未能解决土地问题，因此他试图探讨一种一劳永逸的办法，既使中国富强，又避免产生贫富悬殊的现象，避免社会危机。为此，他希望“举政治革命、社会革命毕其功于一役”。\par
+		但是，同盟会纲领中的民族主义没有从正面鲜明地提出反对帝国主义的主张。当时的革命派对于帝国主义的本质认识不清，害怕帝国主义干涉，甚至幻想以承认不平等条约“继续有效”为条件来换取列强对自己的支持。同时，他们也没有明确地把汉族军阀、官僚、地主作为革命对象，从而给了这部分人后来从内部和外部破坏革命以可乘之机。\par
+		\textbf{民权主义}\par
+		民权主义的内容是“创立民国”，即推翻封建专制制度，建立资产阶级民主共和国。这就是孙中山所说的政治革命。政治革命的目的是建立民国。《军政府宣言》指出：“凡为国民皆平等以有参政权。大总统由国民共举。议会以国民共举之议员构成之。制定中华民国宪法，人人共守。敢有帝制自为者，天下共击之。”孙中山强调，政治革命应当与民族革命并行。民族革命是扫除“现在恶劣政治”，而政治革命则是扫除“恶劣政治的根本”，从而把建立民主共和国的目标与实现民族独立的目标连接在一起，并把斗争矛头直接指向集民族压迫与封建专制统治于一身的清政府。\par
+		不过，民权主义虽然强调了要建立民主共和国，却忽略了广大劳动群众在国家中的地位，因而难以使人民的民主权利得到真正的保证。\par
+		\textbf{民生主义}\par
+		民生主义在这时指的是“平均地权”，也就是孙中山所说的社会革命。孙中山主张核定全国土地的地价，其现有之地价，仍属原主；革命后的增价，则归国家，为国民共享。国家还可按原定地价收买地主的土地。他认为，西方资本主义发展中的诸多社会问题，其根源在于未能解决土地问题，因此他试图探讨一种一劳永逸的办法，既使中国富强，又避免产生贫富悬殊的现象，避免社会危机。为此，他希望“举政治革命、社会革命毕其功于一役”。\par
 		但是孙中山的“平均地权”脱离了中国的实际，它没有触动封建土地所有制，不能满足广大农民的土地要求，在革命中难以成为发动广大工农群众的理论武器。\par
-		孙中山的三民主义学说，初步描绘出中国还不曾有过的资产阶级共和国方案，是一个比较完整而明确的资产阶级民主革命纲领。它的提出，对推动革命的发展产生了重大而积极的影响。
+		孙中山的三民主义学说，初步描绘出中国还不曾有过的资产阶级共和国方案，是一个比较完整而明确的资产阶级民主革命纲领。它的提出，对推动革命的发展产生了重大而积极的影响。\par
 	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[从现代化的视角论述辛亥革命在中国现代化进程中的作用。]
 	\ans[
 		辛亥革命是一次比较完全意义上的资产阶级民主革命。正如毛泽东指出的：“中国反帝反封建的资产阶级民主革命，正规地说起来，是从孙中山先生开始的。”①它是中国人民为救亡图存、振兴中华而奋起革命的一个里程碑，是20世纪中国第一次历史性巨变，具有伟大的历史意义。\par
@@ -69,24 +99,31 @@
 		第四，辛亥革命促使社会经济、思想习惯和社会风俗等方面发生了新的积极变化。南京临时政府成立后，以振兴实业为目标，设立实业部，先后颁布了一系列有利于工商业发展的政策和措施，以推动民族资本主义经济的发展，使随后的几年成了资本主义发展的“黄金时代”。革命政府还大力整顿社会秩序，提倡社会新风，扫除旧时代的“风俗之害”。如：以公元纪年，改用公历；下级官吏见上级官吏不再行跪拜礼；男子以“先生”、“君”的互称取代“老爷”等的称呼；男子剪辫、女子放足之风迅速席卷全国等。这些变化不仅改变了社会风气，也有助于人们的精神解放。\par
 		第五，辛亥革命不仅在一定程度上打击了帝国主义的侵略势力，而且推动了亚洲各国民族解放运动的高涨。列宁指出：“中国人民的革命斗争具有世界意义，因为它将给亚洲带来解放并将破坏欧洲资产阶级的统治”。
 	]
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述辛亥革命的胜利与失败、教训与启示。]
 	\ans[
-		\paragraph{胜利：}
-			\subparagraph{封建帝制的覆灭：}
+		\begin{itemize}
+		\item {\textbf{胜利：}\par
+			\textbf{封建帝制的覆灭：}
 				\textbf{1. 武装起义与保路风潮} 孙中山领导的同盟会不仅提出了革命纲领，而且从事实际的革命活动，他们先后发动了多次武装起义。这些起义虽然相继失败，但是产生了广泛的影响；1911年5月，清廷宣布“铁路干线收归国有”，并与四国银行团订立粤汉、川汉铁路借款合同，借“国有”名义把铁路利权出卖给帝国主义，同时借此“劫夺”商股。这激起了湖北、湖南、广东、四川四省的保路风潮，其中以四川为最烈。清政府在铁路权问题上采取的政策，进一步激起了民众的愤慨和反抗，加速了革命的爆发。
 				\textbf{2. 武昌首义与各地响应} 由于革命形势已经成熟，湖北新军中的共进会和文学社两个革命团体决定联合行动，在武昌举行武装起义。1911年10月10日晚，驻武昌的新军工程第八营的革命党人打响了起义的第一枪。起义军一夜之间就占领武昌，取得首义的胜利。武昌起义吹响了辛亥革命的号角，打开了清王朝统治的缺口。大江南北、长城内外，到处燃起革命的烈火。革命军在3天之内就光复了武汉三镇，成立了湖北军政府。在一个月内，就有13个省和上海及其它的省的许多州县宣布起义，脱离清政府的统治。腐朽的清王朝迅速土崩瓦解。1912年2月12日，清帝被迫退位。在中国延续了两千年的封建帝制顷刻覆灭。
-			\subparagraph{中华民国的建立：}
+			\textbf{中华民国的建立：}
 				\textbf{1. 中华民国临时政府宣告成立} 1911年底，孙中山从海外回到上海。“独立”各省的代表在南京选举孙中山为临时大总统。1912年1月1日，孙中山在南京宣誓就职，改国号为“中华民国”，定1912年为民国元年，并正式成立中华民国临时政府。
-				\textbf{2. 中华民国临时约法} 1912年3月，临时参议院颁布《中华民国临时约法》。这是中国历史上第一部具有资产阶级共和国宪法性质的法典。《临时约法》以根本大法的形式废除了两千年来的封建君主专制制度，确认了资产阶级共和国的政治制度。	
-		\paragraph{失败：}
-			\subparagraph{封建军阀专制统治的形成：}
-				\textbf{1. 袁世凯窃国，辛亥革命流产}辛亥革命取得了巨大的成功，但仍以失败而告终。南京临时政府只存在了3个月便夭折了。北洋军阀首领袁世凯在帝国主义和国内反动势力以及附从革命的旧官僚、立宪派的共同支持下，窃夺了辛亥革命的果实。
-				\textbf{2. 封建军阀的专制统治} 袁世凯窃夺辛亥革命的果实之后，建立了代表大地主和买办资产阶级利益的北洋军阀反动政权。在政治上，北洋政府实行军阀官僚的专制统治。以袁世凯为首的封建军阀们大力扩充军队，建立特务、警察系统。他们制定《暂时新刑律》、《戒严法》等一系列反动法令，剥夺《临时约法》规定给予人民的言论、出版、集会、结社等各种政治权利，禁止罢工和一切革命活动；在经济上，北洋政府竭力维护帝国主义、地主阶级和买办资产阶级的利益。军阀、官僚本身就是大地主，他们还以各种手段兼并土地。许多自耕农和半自耕农陷入破产和丧失土地的境地，变成佃农和雇农。北洋政府还通过“清丈地亩”、征收各种苛捐杂税等手段，对农民进行敲骨吸髓的压榨。军阀与官僚还借助于政治势力，组成官僚买办资本集团，操纵、垄断财政金融和工业、运输业；在文化思想方面，尊孔复古思潮猖獗一时。他们攻击民主共和，宣传封建伦常，甚至要求将孔教定为“国教”。一些帝国主义分子也鼓吹孔教是“中国独一无二之根本”，只有尊孔才能避免“人人之心皆为革命所颠倒”。总之，北洋军阀政府从政治上、经济上和文化思想上对辛亥革命进行了全面的反攻倒算。中国落入了黑暗的深渊。资产阶级革命派在中国建立一个独立、民主的资产阶级共和国的梦想破灭了。
-			\subparagraph{2. 旧民主主义革命的失败：}
-			辛亥革命失败后，中国资产阶级革命派内部也发生了分化。许多革命党人以为，推翻封建帝制、建成共和政体，革命大功告成，从而丧失了革命意志。他们中有的人热衷于追逐个人的官职和利禄，甚至投靠军阀，迅速蜕化为新的官僚、政客。有的人埋头经营实业，为自身牟取经济利益。有的人热心于搞议会政治和政党内阁，甚至主张劝说袁世凯加入国民党。还有的人在革命受到挫折时，意志消沉，隐遁山林，或者出洋留学游历，以逃避国内的政治斗争。
-		\paragraph{教训与启示：} 
-			\subparagraph{教训} 从客观上说，辛亥革命发生于帝国主义时代，帝国主义与以袁世凯为代表的大地主大买办势力以及旧官僚、立宪派一齐勾结起来，从外部和内部绞杀了这场革命。从主观方面来说，这场革命失败的根本原因，在于它的领导者资产阶级革命派本身存在着许多弱点和错误。主要是：第一，没有提出彻底的反帝反封建的革命纲领。第二，不能充分发动和依靠人民群众。第三，不能建立坚强的革命政党，作为团结一切革命力量的强有力的核心。同盟会内部的组织比较松懈，派系纷杂，缺乏一个统一和稳定的领导核心。资产阶级革命派的这些弱点、错误，根源于中国民族资产阶级的软弱性和妥协性。正因为如此，辛亥革命仅仅赶跑了一个皇帝，却没有能够改变封建主义和军阀官僚政治的统治基础，无法完成反帝反封建的根本任务。
-			\subparagraph{启示} 辛亥革命的失败表明，资产阶级共和国的方案没有能够救中国，先进的中国人需要进行新的探索，为中国谋求新的出路。尽管辛亥革命最终失败了，但是，以孙中山为代表的中国民主革命的先驱者的业绩和不屈不挠的奋斗精神，永远是中国近代革命史上光辉的一页。经过辛亥革命，民主共和的思想从此流传广远，人们对革命的继续追求也绵延不绝。许多参加过辛亥革命的人，后来陆续参加中国共产党或成为共产党的忠诚朋友，这不是偶然的。
+				\textbf{2. 中华民国临时约法} 1912年3月，临时参议院颁布《中华民国临时约法》。这是中国历史上第一部具有资产阶级共和国宪法性质的法典。《临时约法》以根本大法的形式废除了两千年来的封建君主专制制度，确认了资产阶级共和国的政治制度。
+		}
+		\item {\textbf{失败：}\par \begin{enumerate}
+			\item {\textbf{封建军阀专制统治的形成：} \begin{enumerate}
+				\item {\textbf{袁世凯窃国，辛亥革命流产。} 辛亥革命取得了巨大的成功，但仍以失败而告终。南京临时政府只存在了3个月便夭折了。北洋军阀首领袁世凯在帝国主义和国内反动势力以及附从革命的旧官僚、立宪派的共同支持下，窃夺了辛亥革命的果实。\par}
+				\item {\textbf{封建军阀的专制统治。} 袁世凯窃夺辛亥革命的果实之后，建立了代表大地主和买办资产阶级利益的北洋军阀反动政权。在政治上，北洋政府实行军阀官僚的专制统治。以袁世凯为首的封建军阀们大力扩充军队，建立特务、警察系统。他们制定《暂时新刑律》、《戒严法》等一系列反动法令，剥夺《临时约法》规定给予人民的言论、出版、集会、结社等各种政治权利，禁止罢工和一切革命活动；在经济上，北洋政府竭力维护帝国主义、地主阶级和买办资产阶级的利益。军阀、官僚本身就是大地主，他们还以各种手段兼并土地。许多自耕农和半自耕农陷入破产和丧失土地的境地，变成佃农和雇农。北洋政府还通过“清丈地亩”、征收各种苛捐杂税等手段，对农民进行敲骨吸髓的压榨。军阀与官僚还借助于政治势力，组成官僚买办资本集团，操纵、垄断财政金融和工业、运输业；在文化思想方面，尊孔复古思潮猖獗一时。他们攻击民主共和，宣传封建伦常，甚至要求将孔教定为“国教”。一些帝国主义分子也鼓吹孔教是“中国独一无二之根本”，只有尊孔才能避免“人人之心皆为革命所颠倒”。总之，北洋军阀政府从政治上、经济上和文化思想上对辛亥革命进行了全面的反攻倒算。中国落入了黑暗的深渊。资产阶级革命派在中国建立一个独立、民主的资产阶级共和国的梦想破灭了。\par}\end{enumerate}
+			\item {\textbf{旧民主主义革命的失败：}
+			辛亥革命失败后，中国资产阶级革命派内部也发生了分化。许多革命党人以为，推翻封建帝制、建成共和政体，革命大功告成，从而丧失了革命意志。他们中有的人热衷于追逐个人的官职和利禄，甚至投靠军阀，迅速蜕化为新的官僚、政客。有的人埋头经营实业，为自身牟取经济利益。有的人热心于搞议会政治和政党内阁，甚至主张劝说袁世凯加入国民党。还有的人在革命受到挫折时，意志消沉，隐遁山林，或者出洋留学游历，以逃避国内的政治斗争。\par}
+			}\end{enumerate}
+		}
+		\item{{\textbf{教训：} 从客观上说，辛亥革命发生于帝国主义时代，帝国主义与以袁世凯为代表的大地主大买办势力以及旧官僚、立宪派一齐勾结起来，从外部和内部绞杀了这场革命。从主观方面来说，这场革命失败的根本原因，在于它的领导者资产阶级革命派本身存在着许多弱点和错误。主要是：第一，没有提出彻底的反帝反封建的革命纲领。第二，不能充分发动和依靠人民群众。第三，不能建立坚强的革命政党，作为团结一切革命力量的强有力的核心。同盟会内部的组织比较松懈，派系纷杂，缺乏一个统一和稳定的领导核心。资产阶级革命派的这些弱点、错误，根源于中国民族资产阶级的软弱性和妥协性。正因为如此，辛亥革命仅仅赶跑了一个皇帝，却没有能够改变封建主义和军阀官僚政治的统治基础，无法完成反帝反封建的根本任务。}
+		\item{\textbf{启示：} 辛亥革命的失败表明，资产阶级共和国的方案没有能够救中国，先进的中国人需要进行新的探索，为中国谋求新的出路。尽管辛亥革命最终失败了，但是，以孙中山为代表的中国民主革命的先驱者的业绩和不屈不挠的奋斗精神，永远是中国近代革命史上光辉的一页。经过辛亥革命，民主共和的思想从此流传广远，人们对革命的继续追求也绵延不绝。许多参加过辛亥革命的人，后来陆续参加中国共产党或成为共产党的忠诚朋友，这不是偶然的。\par}
+		}
+		\end{itemize}
 	]
 \end{enumerate}
 
