answer sec.5 and sec.6

--- a/src/sections/section4.tex
+++ b/src/sections/section4.tex
@@ -18,7 +18,7 @@
 			\item 外部条件主要是列宁领导的共产国际从各个方面给予帮助，推动了中国共产党的成立。
 			\item 中国共产党成立的组织基础应该是陈独秀、李大钊开始进行建党活动。1920年秋，“南陈北李”先后在上海和北京建立中国共产党组织。此后，各地共产党组织先后建立在武汉、长沙、济南、广州和欧洲、日本。 各地共产党组织成立后，有计划地到工人中去宣传马克思主义，马克思主义开始与中国工人运动相结合，无产阶级开始明确自己的使命，看到斗争的前途，由自在阶级上升为自为阶级。各地共产党组织的成立表明建立中国共产党的条件已经基本成熟了。
 		\end{enumerate}
-		
+
 	]
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说中国共产党的成立是开天辟地的大事变？]
@@ -30,7 +30,7 @@
 	\item 中国革命有了新的奋斗目标。即：实现新民主主义革命的胜利，建设社会主义和共产主义社会。
 	\end{enumerate}
 	]
-	
+
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[中国共产党成立后，中国革命出现了怎样的新局面？]
 	\ans[
@@ -51,7 +51,7 @@
 			}
 		\end{enumerate}
 	]
-	
+
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[中国先进分子为什么和怎样选择了马克思主义？]
 	\ans[
@@ -64,30 +64,30 @@
 		\end{itemize}
 		这样，五四运动后中国的先进分子选择了马克思主义的思想旗帜。率先举起马克思主义大旗的是李大钊，他在五四运动前就已经成为一个马克思主义者。五四运动后陈独秀、毛泽东、董必武等更多的先进知识分子，加入到马克思主义的队伍中。
 	]
-	
+
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[以毛泽东为代表的中国共产党人是如何探索和开辟中国革命新道路的？]
 	\ans[
 		\begin{itemize}
 			\item 开展武装反抗国民党统治的斗争 1927年8月，中共中央在汉口召开紧急会议（八七会议），彻底清算了大革命后期的陈独秀右倾机会主义错误，确定了土地革命和武装反抗国民党方针。 八七会议以后，举行了南昌起义、湘赣边界秋收起义、广州起义。中国革命由此发展到了一个新阶段。
-			\item 走农村包围城市的革命道路 以农村为重点，到农村去发动农民，进行土地革命，开展武装斗争，建设根据地，这是1927年以后中国革命发展的客观规律所要求的。农村包围城市、武装夺取政权这条革命心道路的开辟，依靠了党和人民的集体奋斗，凝聚了党和人民的集体智慧。而毛泽东是其中的杰出代表。 
-			\item 毛泽东不仅在实践中首先把革命进攻的方向指向了农村，而且从理论上阐明了武装斗争的极端重要性和农村应当成为党的工作中心的思想 1928年，毛泽东写了《中国的红色政权为社么能够存在？》、《井冈山的斗争》等文章，明确指出以农业为主要经济的中国革命，以军事发展暴动，是一种特征；还科学阐明了共产党领导的土地革命、武装斗争于根据地建设这三者之间的辩证统一关系。 1930年，《星星之火可以燎原》一文中，毛泽东指出：红军、游击队和红色区域的建立和发展，是半殖民地中国在无产阶级领导下的农民斗争的最高形式，和半殖民地农民斗争发展的必然结果，并且无疑议的是促进全国革命高潮的最重要因素。 
-			\item 农村包围城市，武装夺取政权理论，是对1927年革命失败后中国共产党领导的红军和根据地斗争经验的科学概括。它是以毛泽东为代表的中国共产党人同当时党内盛行的把马克思主义教条化、把共产国际和苏联经验神圣化的错误倾向做坚决斗争基础上形成的。 农村包围城市、武装夺取政权理论的提出，标志着中国化的马克思主义：毛泽东思想的初步形成。 
+			\item 走农村包围城市的革命道路 以农村为重点，到农村去发动农民，进行土地革命，开展武装斗争，建设根据地，这是1927年以后中国革命发展的客观规律所要求的。农村包围城市、武装夺取政权这条革命心道路的开辟，依靠了党和人民的集体奋斗，凝聚了党和人民的集体智慧。而毛泽东是其中的杰出代表。
+			\item 毛泽东不仅在实践中首先把革命进攻的方向指向了农村，而且从理论上阐明了武装斗争的极端重要性和农村应当成为党的工作中心的思想 1928年，毛泽东写了《中国的红色政权为社么能够存在？》、《井冈山的斗争》等文章，明确指出以农业为主要经济的中国革命，以军事发展暴动，是一种特征；还科学阐明了共产党领导的土地革命、武装斗争于根据地建设这三者之间的辩证统一关系。 1930年，《星星之火可以燎原》一文中，毛泽东指出：红军、游击队和红色区域的建立和发展，是半殖民地中国在无产阶级领导下的农民斗争的最高形式，和半殖民地农民斗争发展的必然结果，并且无疑议的是促进全国革命高潮的最重要因素。
+			\item 农村包围城市，武装夺取政权理论，是对1927年革命失败后中国共产党领导的红军和根据地斗争经验的科学概括。它是以毛泽东为代表的中国共产党人同当时党内盛行的把马克思主义教条化、把共产国际和苏联经验神圣化的错误倾向做坚决斗争基础上形成的。 农村包围城市、武装夺取政权理论的提出，标志着中国化的马克思主义：毛泽东思想的初步形成。
 			\item 随着革命心道路的开辟，中国革命开始走向复兴。中国共产党领导的红军和根据地逐步发展起来。红军游击战争实际上已经成为中国革命的主要形式，农村根据地成为积蓄和锻炼革命力量的主要战略阵地。
 		\end{itemize}
 	]
-	
+
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说遵义会议是中国共产党历史上一个生死攸关的转折点？]
 	\ans[
 		\begin{itemize}
 			\item 遵义会议批判了博古、李德在军事指挥上的错误，实际上结束了以王明为代表的“左”倾教条主义、冒险主义在党中央的统治，避免了中国革命遭到更为严重的损失。
 			\item 遵义会议对中央领导机构进行了改组，确立了毛泽东在红军和党中央的领导地位，开始形成以毛泽东为核心的党中央的正确领导。
-			\item 遵义会议对党中央领导机构的改组和对错误军事路线的纠正，都是在同共产国际中断联系的情况下进行的。这是中国共产党第一次独立自主地运用马克思列宁主义基本原理解决自己的路线、方针和政策的会议。这标志着中国共产党已经在政治上开始走向成熟。 
+			\item 遵义会议对党中央领导机构的改组和对错误军事路线的纠正，都是在同共产国际中断联系的情况下进行的。这是中国共产党第一次独立自主地运用马克思列宁主义基本原理解决自己的路线、方针和政策的会议。这标志着中国共产党已经在政治上开始走向成熟。
 		\end{itemize}
 		遵义会议在极端危急的历史关头，挽救了党，挽救了红军，挽救了中国革命，它因此而成为中国共产党历史上一个生死攸关的转折点。
 	]
-	
+
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说“井冈山革命根据地是中国革命的摇篮”？]
 	\ans[
@@ -99,7 +99,7 @@
 	]
 
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\question[9、什么是长征精神？当代大学生应该怎样弘扬长征精神？]
+	\question[什么是长征精神？当代大学生应该怎样弘扬长征精神？]
 	\ans[
 		\begin{enumerate}
 			\item 长征精神是红军指战员在长征途中表现出了对革命理想和事业无比的忠诚、坚定的信念，表现出了不怕牺牲、敢于胜利的无产阶级乐观主义精神，表现出了顾全大局、严守纪律、亲密团结的高尚品德。伟大长征精神教育了一代又一代人，无数英雄模范继承长征精神，不断书写着感人篇章。
@@ -117,4 +117,3 @@
 		\end{enumerate}
 	]
 \end{enumerate}
-
