--- a/src/sections/section6.tex
+++ b/src/sections/section6.tex
@@ -1,6 +1,34 @@
 \section{人民解放战争胜利的历史必然性}
 \begin{enumerate}
-\question[抗日战争胜利后，为什么国民党政府迅速走向崩溃、人民解放战争迅速取得胜利？]
-\question[为什么说“没有共产党就没有新中国”？中国革命取得胜利的基本经验是什么？]
-\question[结合你所学过的知识，论述“1921年”、“1935年”、“1949年”这些年代的历史联系性及其所蕴含的历史意义。]
+    \question[抗日战争胜利后，为什么国民党政府迅速走向崩溃、人民解放战争迅速取得胜利？]
+    \ans[
+        第一，国民党政府由于它的专制独裁统治和官员们的贪污腐败、大发国难财，抗战后期在大后方便已严重丧失人心。在抗战胜利时曾经对他抱有很大希望的原沦陷区人民，也很快对他感到极端的失望。一个重要原因，就是国民党政府派出的官员到原沦陷区接收时，把接收变成了“劫收”，大发国难财。\par
+        第二，国民党之所以迅速失去民心，还由于它违背全国人民迫切要求休养生息、和平建国的意愿，执行反人民的内战政策。为了筹措内战经费，国民党政府除了对人民征收苛重的捐税以外，更无限制的发行纸币。导致恶性通货膨胀，工农业生产严重萎缩。\par
+        这样，国民党当局就将全国各阶层人民之于饥饿和死亡的界线上，因而就迫使全国各阶层人民团结起来，同蒋介石反动政府作你死我活的斗争，除此以外，再无出路。\par
+    ]
+    \question[为什么说“没有共产党就没有新中国”？中国革命取得胜利的基本经验是什么？]
+    \ans[
+        \begin{itemize}
+            \item{\textbf{“没有共产党就没有新中国”}\par
+                第一，中国共产党作为工人阶级的政党，不仅代表着中国工人阶级的利益，而且代表着整个中华民族和全中国人民的利益。\par
+                第二，中国共产党是马克思主义的科学理论武装起来的，他以中国化的马克思主义即马克思列宁主义基本原理与中国实践相结合的毛泽东思想为一切工作的指针。\par
+                第三，中国共产党人在革命过程中始终英勇地站在斗争的最前线。以实际行动表明了自己是最有远见，最富于牺牲精神，最坚定，而又最能虚心体察民情并依靠群众的坚强的革命者，从而赢得了广大中国人民的衷心拥护。\par
+                第四，“没有共产党就没有新中国”。这是中国人民基于自己的切身体验所确认的客观真理。
+            }
+            \item{\textbf{中国革命取得胜利的基本经验}\par
+                第一，建立广泛的统一战线。\par
+                第二，坚持革命的武装斗争。\par
+                第三，加强共产党自身的建设。\par
+                毛泽东指出：“统一战线，武装斗争，党的建设是中国共产党在中国革命中战胜敌人的三大法宝，三个主要的法宝。”\par
+            }
+        \end{itemize}
+]
+    \question[结合你所学过的知识，论述“1921年”、“1935年”、“1949年”这些年代的历史联系性及其所蕴含的历史意义。]
+    \ans[
+        \begin{itemize}
+            \item 1921年是中国共产党诞生的年份。在中国历史上这是开天辟地的大事件。因此，1921年也是中国共产党全部历史的开端，在中国革命史上具有划时代的作用。
+            \item 1935年1月15日至17日，中共中央政治局在贵州遵义召开的独立自主地解决中国革命问题的一次极其重要的扩大会议。这次会议是在红军第五次反“围剿”失败和长征初期严重受挫的情况下，为了纠正王明“左”倾领导在军事指挥上的错误，挽救红军和中国革命的危机而召开的。遵义会议集中全力解决了当时具有决定意义的军事和组织问题，肯定了毛泽东的军事战略主张，确立了毛泽东在党和红军中的领导地位。会议在与共产国际中断联系的情况下，独立自主地作出一系列重大决策，在极其危急的情况下挽救了党，挽救了红军，挽救了中国革命，是党的历史上一个生死攸关的转折点。
+            \item 1949年10月1日下午2时，中华人民共和国举行开国大典，毛泽东在北京天安门城楼上宣告中华人民共和国、中央人民政府成立了。
+        \end{itemize}
+    ]
 \end{enumerate}
