--- a/src/sections/section5.tex
+++ b/src/sections/section5.tex
@@ -1,8 +1,22 @@
 \section{抗日战争中的国民党与共产党}
 \begin{enumerate}
-\question[第二次国共合作是如何实现的？]
-\question[怎样评价国民党政府在抗日战争中执行的路线和正面战场的地位与作用？]
-\question[为什么说中国共产党是中国人民抗日战争的中流砥柱？]
-\question[2017年1月教育部基础教育二司发函，要求在教材中落实“14年抗战”概念，将“8年抗战”改为“14年抗战”。请谈谈你对这一问题的认识。]
+	\question[第二次国共合作是如何实现的？]
+	\ans[
+		第二次国共合作是在抗日的基础上产生的。日本帝国主义入侵中国已久。1927年,日本首相《田中奏折》把日寇野心暴露无遗。1931年“九一八事变”，日寇又加紧入侵中国。1935年的华北事变，中日民族矛盾上升为主要矛盾，华北危急，中华民族危急，中国共产党人率先喊出了“停止内战，一致抗日”号召，得到了全体国人的拥护。中国国民党出于维护自身统治与民族尊严，被迫放弃“攘外必先安内”政策，国共两党再度走到了一起，实现了第二次国共合作。
+	]
+	\question[怎样评价国民党政府在抗日战争中执行的路线和正面战场的地位与作用？]
+	\ans[
+		第一，国民党政府执行的是片面抗战路线，即不敢放手发动和武装民众，实行单纯的政府和正规军的抗战；在战略战术上，没有采取积极防御的方针，而是进行单纯的阵地防御战。\par
+	    第二，国民党领导的正面战场，对抗日战争的胜利做出了重要贡献。特别是在抗战初期的战略防御阶段。\par
+	    第三，国民党的正面战场在抗战个阶段中表现不同，其地位和作用也不同。抗战初期的战略防御阶段，国民党政府积极抗战，正面战场在整个抗战中起了重要作用。抗战进入战略相持阶段，其实行片面抗战，制造反共摩擦，在抗战中的地位、作用明显下降。在战略反攻阶段，其虽坚持抗战，但对夺取抗战最后胜利的作用十分有限。\par
+	]
+	\question[为什么说中国共产党是中国人民抗日战争的中流砥柱？]
+	\ans[
+		第一，中国共产党积极倡导、促成、维护抗日统一战线，最大限度动员全国军民共同抗战成为凝聚全民族抗战力量的杰出组织者和鼓舞着。\par
+	    第二，以毛泽东为首的中国共产党人，把马克思列宁主义基本原理同中国具体实践相结合，创立和发展了毛泽东思想。制定、实施了一套完整的抗战策略和方针，提出了持久抗战的战略思想，对抗战胜利发挥了重要作用。\par
+	    第三，中国共产党通过游击战开辟敌后战场，建立抗日根据地，牵制和消灭了日军大量有生力量，减轻了正面战场的压力，也为抗日战争的战略返攻准备了条件。\par
+	    第四，中国共产党人以自己最富于献身的爱国主义、不怕流血牺牲的模范行动，支撑起全民族救亡图存的希望，成为夺取抗战胜利的民族先锋。\par
+	]
+	\question[2017年1月教育部基础教育二司发函，要求在教材中落实“14年抗战”概念，将“8年抗战”改为“14年抗战”。请谈谈你对这一问题的认识。]
+	\unsolve
 \end{enumerate}
-
