--- a/src/sections/section1.tex
+++ b/src/sections/section1.tex
@@ -1,7 +1,7 @@
-\section{导论}
+﻿\section{导论}
 \begin{enumerate}
 	\question[学习“中国近现代史纲要”课程的必要性是什么？]
-	\unsolve
+	\ans[]
 	\question[什么是中国近现代史？其主流和本质是什么？]
 	\ans[中国的近代史近现代史，是指1840年以来中国的历史。其中1850年鸦片战争爆发到1949年中华人民共和国成立前夕的历史，是中国的近代史；1949年中华人民共和国成立以来的历史，是中国的现代史。\par
 就其主流和本质来说，是中国一代又一代的人民群众和仁人志士为救亡图存而英勇奋斗、艰苦探索的历史；是全国各族人民在中国共产党的领导下，进行伟大的艰苦的斗争，经过新民主主义革命，赢得民族独立和人民解放的历史；是全国各族人民在中国共产党的领导下，经过社会主义革命、建设和改革，把一个极度贫弱的旧中国逐步变成一个初步繁荣昌盛、充满生机和活力的社会主义新中国的历史。
