--- a/src/sections/section1.tex
+++ b/src/sections/section1.tex
@@ -1,18 +1,11 @@
 ﻿\section{导论}
 \begin{enumerate}
 	\question[学习“中国近现代史纲要”课程的必要性是什么？]
-	\ans[1.学习近现代史对我们价值观人生观的形成有很大影响，激励我们发扬革命仁人志士们的爱国主义、艰苦奋斗的民族精神，居安思危，好好学习文化知识，定理长远人生目标，为祖国更好的发展做出贡献；
-2.可以扩充我们的知识面，开阔我们的视野，并且中国的近现代史连接过去和现在，其承前启后的纽带作用，读史使人明智，因此可以使我们更有自豪感和羞恶感，在历史的长河中感悟人生；
-3.近现代史是一部人民坚决的抗争史，它告诉我们中华民族是自强不息、不畏强暴的民族，中国人具有不屈不挠的斗争精神，更是一部艰辛勇敢的探索史，地主阶级、农民阶级和资产阶级由于自身的阶级局限性，都不能提出科学的革命纲领，不能改变中国半殖民地半封建社会的性质，只有中国共产党才能救中国，只有社会主义才能救中国；
-4.可以让莪们知道近现代史的主流和本质是中国仁人志士和人民群众为救亡图存和实现中华民族的伟大复兴而英勇斗争、艰苦探索的历史；尤其是全国各族人民在中国共产党的领导下，进行艰苦的斗争，经过新民主主义革命，赢得民族独立和人民解放的历史；经过社会主义革命、建设和改革，把一个极度贫弱的旧中国逐步变成一个繁荣昌盛、充满生机和活力的社会主义新中国的历史。]
+	\ans[sd]
 	\question[什么是中国近现代史？其主流和本质是什么？]
 	\ans[中国的近代史近现代史，是指1840年以来中国的历史。其中1850年鸦片战争爆发到1949年中华人民共和国成立前夕的历史，是中国的近代史；1949年中华人民共和国成立以来的历史，是中国的现代史。\par
 就其主流和本质来说，是中国一代又一代的人民群众和仁人志士为救亡图存而英勇奋斗、艰苦探索的历史；是全国各族人民在中国共产党的领导下，进行伟大的艰苦的斗争，经过新民主主义革命，赢得民族独立和人民解放的历史；是全国各族人民在中国共产党的领导下，经过社会主义革命、建设和改革，把一个极度贫弱的旧中国逐步变成一个初步繁荣昌盛、充满生机和活力的社会主义新中国的历史。
 ]
 	\question[联系党的十八以来社会主义现代化建设取得的历史性成就，阐述中国选择社会主义的正确性。]
-	\ans[1.经济建设取得重大成就。坚定不移贯彻新发展理念，坚决端正发展观念、转变发展方式，发展质量和效益不断提升。经济保持中高速增长，在世界主要国家中名列前茅，国内生产总值从五十四万亿元增长到八十万亿元，稳居世界第二，对世界经济增长贡献率超过百分之三十。供给侧结构性改革深入推进，经济结构不断优化；
-2.民主法治建设迈出重大步伐。积极发展社会主义民主政治，推进全面依法治国，党的领导、人民当家作主、依法治国有机统一的制度建设全面加强，党的领导体制机制不断完善，社会主义民主不断发展，党内民主更加广泛，社会主义协商民主全面展开，爱国统一战线巩固发展，民族宗教工作创新推进。中国特色社会主义法治体系日益完善，全社会法治观念明显增强。国家监察体制改革试点取得实效；
-3.思想文化建设取得重大进展。加强党对意识形态工作的领导，党的理论创新全面推进，马克思主义在意识形态领域的指导地位更加鲜明，中国特色社会主义和中国梦深入人心，社会主义核心价值观和中华优秀传统文化广泛弘扬，群众性精神文明创建活动扎实开展；
-4.人民生活不断改善。一大批惠民举措落地实施，人民获得感显著增强。脱贫攻坚战取得决定性进展，六千多万贫困人口稳定脱贫，贫困发生率从百分之十点二下降到百分之四以下。教育事业全面发展，中西部和农村教育明显加强。就业状况持续改善，城镇新增就业年均一千三百万人以上。城乡居民收入增速超过经济增速，中等收入群体持续扩大。覆盖城乡居民的社会保障体系基本建立，人民健康和医疗卫生水平大幅提高，保障性住房建设稳步推进。社会治理体系更加完善，社会大局保持稳定，国家安全全面加强；
-5.生态文明建设成效显著。大力度推进生态文明建设，全党全国贯彻绿色发展理念的自觉性和主动性显著增强，忽视生态环境保护的状况明显改变。]
+	\unsolve
 \end{enumerate}
