--- a/src/sections/section2.tex
+++ b/src/sections/section2.tex
@@ -1,4 +1,4 @@
-﻿\section{资本—帝国主义的入侵与近代中国社会的变化}
+\section{资本—帝国主义的入侵与近代中国社会的变化}
 \begin{enumerate}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说鸦片战争是中国近代史的起点？]
@@ -13,18 +13,7 @@
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述中国梦的由来和内涵。]
-	\ans[{
-               由来：{
-                  1.中华民族五千年文明史，各项成就推动了政治、经济和文化的发展，为人类社会进步做出巨大贡献，中国古代灿烂文明是中国梦之历史源起；
-                  2.1840年开始的列强侵华，中国梦是对列强侵华、落后挨打的抗争，历经太平天国、洋务运动个、戊戌变法、辛亥革命，半殖民地半封建社会的性质没有改变，反帝反封建的任务没有完成，民族独立和人民解放、国家富强和人民富裕，始终是那个年代中国人无法实现的梦想；
-                  3.中国共产党人前赴后继、不懈奋斗，完成了新民主主义革命，建立了新中国，实现了民族独立、人民解放；完成了社会主义革命，确立了社会主义基本制度，进行了改革开放的的伟大革命，开创、坚持、发展了中国特色社会主主义，从根本上改变了中国人民和中华民族的前途命运，为实现中国梦积累了宝贵经验，、提供例如理论指导、奠定了物质基础；
-                             }
-               内涵：{
-                   国家富强、民族振兴、人民幸福 {
-                   1.中国梦是实现中华民族伟大复兴的崇高理想；全面建成小康社会、建成富强民主文明和谐的社会主义现代化国家，实现“两个一百年”的奋斗目标，就是现阶段中国人民的共同愿望；
-                   2.中国梦是国家、民族、社会梦想和大众梦想的统一；要把实现国家强盛、民族复兴、社会进步，同中国人民的共同富裕、全面小康结合起来；
-                   3.中国梦对于不同阶层、不同群体有不同的愿景和诉求。
-                              } ]
+	\unsolve
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[资本—帝国主义的入侵给中国带来了什么？]
