--- a/src/sections/section3.tex
+++ b/src/sections/section3.tex
@@ -1,4 +1,4 @@
-﻿
+
 \section{从洪秀全到孙中山}
 \begin{enumerate}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -35,8 +35,7 @@
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[试述近代以来中国人学习西方的努力屡遭失败的原因。]
-	\ans[1.农民阶级：农民阶级是落后的生产力代表，他们有革命的愿望，但是缺少革命的指导，他们想推翻旧的剥削者，过上传说中的大同生活，但是这在当时中国的生产力水平条件下是根本不可能实现的。;
-             2.、民族资产阶级：中国的民族资产阶级从产生之初就深受官僚阶级、大地主大资产阶级、外国资产阶级的剥削和压榨，因此他们也有革命性的一面。但是他们本身又和这些阶级有千丝万缕的联系，所以他们有妥协性的一面，因此革命很不彻底，从辛亥革命就可以看的出来。虽然辛亥革命推翻了满清的统治，但是却保留了很多的封建残余，外国的殖民势力也未得到清除，因此是有局限性的;]
+	\unsolve
 	
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\question[为什么说太平天国起义是中国旧式农民战争的最高峰？]
