--- a/src/sections/section5.tex
+++ b/src/sections/section5.tex
@@ -1,4 +1,4 @@
-﻿\section{抗日战争中的国民党与共产党}
+\section{抗日战争中的国民党与共产党}
 \begin{enumerate}
 	\question[第二次国共合作是如何实现的？]
 	\ans[
@@ -18,9 +18,5 @@
 	    第四，中国共产党人以自己最富于献身的爱国主义、不怕流血牺牲的模范行动，支撑起全民族救亡图存的希望，成为夺取抗战胜利的民族先锋。\par
 	]
 	\question[2017年1月教育部基础教育二司发函，要求在教材中落实“14年抗战”概念，将“8年抗战”改为“14年抗战”。请谈谈你对这一问题的认识。]
-	\ans[1.“八年抗战”的说法是指从1937年“七七事变”中日战争全面爆发算起，至1945年8月15日日本天皇宣布无条件投降的8年时间。而如果从1931年“九一八事变”算起至日本无条件投降，则为14年。1931年9月18日夜，在日本关东军安排下，其铁道“守备队”炸毁沈阳柳条湖附近日本修筑的南满铁路路轨，挑起“九一八事变”；
-             2.此次修改对于提升国民对抗战历史的认知和爱国之情也有着重要意义。1931年至1937这六年间，中国军民发起的东北抗联、一二八抗战、长城抗战等局部战争为抵抗日本侵略做出了巨大牺牲，这段历史不应忘记，将“八年抗战”改为“十四年抗战”具有历史普及的意义，也是对先烈的缅怀和纪念；
-             3.将“八年抗战”改为“十四年抗战”能让学生更全面、真实地认识抗战历史，更完整地了解日军侵略罪行和我国人民为抗战做出的巨大牺牲和努力，从而能更加坚定理想信念，增强责任感、使命感，为中国梦的实现而努力读书、学习；
-             4.中国共产党最先号召发动中华民族的抗日战争，最早提出建立抗日民族统一战线，最早在东北领导东北抗日游击战。通过“八年抗战”修改为“十四年抗战”能更加清楚地证明，中国共产党不仅是中国工人阶级的先锋队，也是中国人民和中华民族的先锋；
-             5.将“八年抗战”改为“十四年抗战”并不代表就否认“七七事变”的历史意义，它还是全面抗战的开始，以“七七事变”为开始来标记的“八年抗战”是“全面抗战”，而“十四年抗战”是“全程抗战”，包含着“八年抗战”；而之前“九一八事变”就已开始了局部抗战，整个抗战历史是前后贯通的整体。]
+	\unsolve
 \end{enumerate}
